start gpt slides

--- a/fdisk-osc12.tex
+++ b/fdisk-osc12.tex
@@ -109,6 +109,12 @@
   \end{itemize} 
 \end{frame}
 
+\section{GPT Overview}
+\begin{frame}\frametitle{What is GPT?}
+  A standard developed by Intel in the late '90s for the layout of the partition table on a physical hard disk.\newline
+
+  It overcomes major limitations of MBRs and today forms part of the \textbf{UEFI} standard.
+\end{frame}
 
 \section{The Road Ahead}
 \begin{frame}\frametitle{The Road Ahead}
@@ -125,6 +131,5 @@
 \begin{frame}\frametitle{Thank you}
   \center{ \includegraphics[scale=0.5]{img/thankyou} }
 \end{frame}
-
 
 \end{document}
