--- a/fdisk-osc12.tex
+++ b/fdisk-osc12.tex
@@ -2,61 +2,64 @@
 % Copyright (C) 2012 Davidlohr Bueso <dave@gnu.org>
 %
 % Presentation for openSUSE conference 2012 - Prague.
-% 
+
 \documentclass{beamer}
 \setbeamertemplate{navigation symbols}{}
 \usepackage{beamerthemeshadow}
 
 \begin{document}
-\title{fdisk: a XXI Century Disk Partitioning Tool}  
+\title{fdisk: A XXI Century Disk Partitioning Tool}
 \author{Davidlohr Bueso dave@gnu.org \\ Petr Uzel petr.uzel@suse.cz}
-\date{\today} 
+\date{\today}
 
 \begin{frame}
 \titlepage
 \end{frame}
 
 \begin{frame}\frametitle{Table of contents}\tableofcontents
-\end{frame} 
+\end{frame}
 
 % INTRODUCTION
-\section{Introduction} 
+\section{Introduction}
 \begin{frame}\frametitle{Introduction}
 
 \end{frame}
+
 \subsection{Disk Partitioners}
-\begin{frame}
+\begin{frame}\frametitle{Disk Partitioners}
+Some popular disk partitioners available in Linux:
 \begin{itemize}
-\item \textbf{fdisk}
+\item \textbf{fdisk} - part of the util-linux package.
 \item parted
 \item gdisk
 \end{itemize}
 \end{frame}
 
 
-\section{Fdisk Problems} 
-\subsection{Smelly, Legacy Code}
+\section{Fdisk's State of the Art}
+\subsection{Fdisk Problems}
+\subsubsection{Smelly, Legacy Code}
 
 \begin{frame}\frametitle{Smelly, Legacy Code}
   \begin{columns}
     \begin{column}{.5\linewidth}
-      The Linux fdisk program is over 20 years old and is a complex product of multiple authors, concepts, coding styles etc.\newline
-      
-      As a result, code is \textbf{glued} together and making it difficult and error prone to enhance an/or fix bugs.
+      The Linux fdisk program is over 20 years old and is a complex product of multiple authors, concepts, specifications and coding styles, among others.\newline
+
+      As a result, code is \textbf{glued} together, and making it difficult and error prone to enhance an/or fix bugs.
     \end{column}
     \begin{column}{.5\linewidth}
-      \includegraphics[scale=0.2]{img/glustick} 
+      \includegraphics[scale=0.2]{img/glustick}
     \end{column}
   \end{columns}
 \end{frame}
 
 \begin{frame}\frametitle{Smelly, Legacy Code}
 \begin{figure}
-\includegraphics[scale=0.4]{img/SmellyLegacyCode} 
+\includegraphics[scale=0.4]{img/SmellyLegacyCode}
 \end{figure}
 \end{frame}
 
-\subsection{Stuck in the Past}
+\subsubsection{Stuck in the Past}
 \begin{frame}\frametitle{Stuck in the Past}
   \begin{columns}
     \begin{column}{.5\linewidth}
@@ -73,16 +76,16 @@
   \end{columns}
 \end{frame}
 
-\subsection{Everyone Looses}
+\subsubsection{Everyone Looses}
 \begin{frame}\frametitle{Everyone Looses}
     \begin{columns}
       \begin{column}{.5\linewidth}
         \begin{block}{Hackers loose}
           Adding new code and extending functionality is difficult, tedious and error prone.
-        \end{block}\pause
+        \end{block}
         \includegraphics[scale=0.3]{img/running-uphill}
       \end{column}
-      \begin{column}{.5\linewidth} 
+      \begin{column}{.5\linewidth}
         \includegraphics[scale=0.5]{img/leaving}
         \begin{block}{Users loose}
         Fdisk \textbf{cannot} compete with other partitioning tools and thus looses users. Hey, healthy competition is good for everyone!
@@ -91,22 +94,22 @@
     \end{columns}
   \end{frame}
 
-\section{Fixing Fdisk}
+\subsection{Fixing Fdisk}
 \begin{frame}\frametitle{Short Term}
   Short term goals:
   \begin{itemize}
   \item Cleanup and refactor current, legacy, code
   \item Create an internal API that abstracts disklabel concepts and specifications
   \item Add GUID Partition Table (GPT) support
-  \end{itemize} 
+  \end{itemize}
 \end{frame}
 
 \begin{frame}\frametitle{Longer Term}
   Long term goals:
   \begin{itemize}
-  \item Create an independant, libfdisk shared library.
+  \item Create an independent, libfdisk shared library.
   \item Rewrite cfdisk and sfdisk with new library.
-  \end{itemize} 
+  \end{itemize}
 \end{frame}
 
 \section{GPT Overview}
@@ -115,6 +118,26 @@
 
   It overcomes major limitations of MBRs and today forms part of the \textbf{UEFI} standard.
 \end{frame}
+
+\subsection{Benefits of GPT}
+\begin{frame}\frametitle{Benefits of GPT}
+  So, what's the big deal about GPT?
+  \begin{itemize}
+  \item Forget extended or logical DOS-like partitions. GPT can handle at least 128 partitions.
+  \item 64-bit sectors gives us $2^{64}$ available sectors, or 9.4 Zb partitions (with 512 bytes).
+  \item 32-bit CRC checksums to ensure data integrity.
+  \item Redundant data structures help protect against disk errors.
+  \end{itemize}
+\end{frame}
+
+\subsection{Drawbacks of GPT}
+\begin{frame}\frametitle{Drawbacks of GPT}
+  There's no such thing as a free lunch:
+  \begin{itemize}
+    \item s
+  \end{itemize}
+\end{frame}
+
 
 \section{The Road Ahead}
 \begin{frame}\frametitle{The Road Ahead}
@@ -125,7 +148,7 @@
   \item General cleanups and refactoring
   \item Documentation
   \item tests, tests, tests
-  \end{itemize} 
+  \end{itemize}
 \end{frame}
 
 \begin{frame}\frametitle{Thank you}
