--- a/fdisk-osc12.tex
+++ b/fdisk-osc12.tex
@@ -10,7 +10,8 @@
 \begin{document}
 \title{fdisk: A XXI Century Disk Partitioning Tool}
 \author{Davidlohr Bueso dave@gnu.org \\ Petr Uzel petr.uzel@suse.cz}
-\date{\today}
+\institute{openSUSE Conference 2012}
+\date{October 21st, 2012.}
 
 \begin{frame}
 \titlepage
@@ -19,137 +20,10 @@
 \begin{frame}\frametitle{Table of contents}\tableofcontents
 \end{frame}
 
-% INTRODUCTION
-\section{Introduction}
-\begin{frame}\frametitle{Introduction}
-
-\end{frame}
-
-\subsection{Disk Partitioners}
-\begin{frame}\frametitle{Disk Partitioners}
-Some popular disk partitioners available in Linux:
-\begin{itemize}
-\item \textbf{fdisk} - part of the util-linux package.
-\item parted
-\item gdisk
-\end{itemize}
-\end{frame}
-
-
-\section{Fdisk's State of the Art}
-\subsection{Fdisk Problems}
-\subsubsection{Smelly, Legacy Code}
-
-\begin{frame}\frametitle{Smelly, Legacy Code}
-  \begin{columns}
-    \begin{column}{.5\linewidth}
-      The Linux fdisk program is over 20 years old and is a complex product of multiple authors, concepts, specifications and coding styles, among others.\newline
-
-      As a result, code is \textbf{glued} together, and making it difficult and error prone to enhance an/or fix bugs.
-    \end{column}
-    \begin{column}{.5\linewidth}
-      \includegraphics[scale=0.2]{img/glustick}
-    \end{column}
-  \end{columns}
-\end{frame}
-
-\begin{frame}\frametitle{Smelly, Legacy Code}
-\begin{figure}
-\includegraphics[scale=0.4]{img/SmellyLegacyCode}
-\end{figure}
-\end{frame}
-
-\subsubsection{Stuck in the Past}
-\begin{frame}\frametitle{Stuck in the Past}
-  \begin{columns}
-    \begin{column}{.5\linewidth}
-      \includegraphics[scale=0.3]{img/linkman}
-       \end{column}
-    \begin{column}{.5\linewidth}
-      \begin{itemize}
-      \item DOS compatibility mode
-      \item Only works with MBRs
-      \item CHS addressing
-      \item Mainframe style UIs\newline
-      \end{itemize}
-    \end{column}
-  \end{columns}
-\end{frame}
-
-\subsubsection{Everyone Looses}
-\begin{frame}\frametitle{Everyone Looses}
-    \begin{columns}
-      \begin{column}{.5\linewidth}
-        \begin{block}{Hackers loose}
-          Adding new code and extending functionality is difficult, tedious and error prone.
-        \end{block}
-        \includegraphics[scale=0.3]{img/running-uphill}
-      \end{column}
-      \begin{column}{.5\linewidth}
-        \includegraphics[scale=0.5]{img/leaving}
-        \begin{block}{Users loose}
-        Fdisk \textbf{cannot} compete with other partitioning tools and thus looses users. Hey, healthy competition is good for everyone!
-        \end{block}
-      \end{column}
-    \end{columns}
-  \end{frame}
-
-\subsection{Fixing Fdisk}
-\begin{frame}\frametitle{Short Term}
-  Short term goals:
-  \begin{itemize}
-  \item Cleanup and refactor current, legacy, code
-  \item Create an internal API that abstracts disklabel concepts and specifications
-  \item Add GUID Partition Table (GPT) support
-  \end{itemize}
-\end{frame}
-
-\begin{frame}\frametitle{Longer Term}
-  Long term goals:
-  \begin{itemize}
-  \item Create an independent, libfdisk shared library.
-  \item Rewrite cfdisk and sfdisk with new library.
-  \end{itemize}
-\end{frame}
-
-\section{GPT Overview}
-\begin{frame}\frametitle{What is GPT?}
-  A standard developed by Intel in the late '90s for the layout of the partition table on a physical hard disk.\newline
-
-  It overcomes major limitations of MBRs and today forms part of the \textbf{UEFI} standard.
-\end{frame}
-
-\subsection{Benefits of GPT}
-\begin{frame}\frametitle{Benefits of GPT}
-  So, what's the big deal about GPT?
-  \begin{itemize}
-  \item Forget extended or logical DOS-like partitions. GPT can handle at least 128 partitions.
-  \item 64-bit sectors gives us $2^{64}$ available sectors, or 9.4 Zb partitions (with 512 bytes).
-  \item 32-bit CRC checksums to ensure data integrity.
-  \item Redundant data structures help protect against disk errors.
-  \end{itemize}
-\end{frame}
-
-\subsection{Drawbacks of GPT}
-\begin{frame}\frametitle{Drawbacks of GPT}
-  There's no such thing as a free lunch:
-  \begin{itemize}
-    \item s
-  \end{itemize}
-\end{frame}
-
-
-\section{The Road Ahead}
-\begin{frame}\frametitle{The Road Ahead}
-  Still plenty of work to do, some things include:
- \begin{itemize}
-  \item Enhance UIs ($libreadline$ - gdb style)
-  \item Support more disklabels (APM, AIX)
-  \item General cleanups and refactoring
-  \item Documentation
-  \item tests, tests, tests
-  \end{itemize}
-\end{frame}
+\include{intro}
+\include{state-art}
+\include{gpt-overview}
+\include{road-ahead}
 
 \begin{frame}\frametitle{Thank you}
   \center{ \includegraphics[scale=0.5]{img/thankyou} }
