--- a/road-ahead.tex
+++ b/road-ahead.tex
@@ -1,11 +1,20 @@
+% Copyright (C) 2012 Davidlohr Bueso <dave@gnu.org>
+
+% THE ROAD AHEAD
 \section{The Road Ahead}
 \begin{frame}\frametitle{The Road Ahead}
-  Still plenty of work to do, some things include:
- \begin{itemize}
-  \item Enhance UIs ($libreadline$ - gdb style)
-  \item Support more disklabels (APM, AIX)
-  \item General cleanups and refactoring
-  \item Documentation
-  \item tests, tests, tests
-  \end{itemize}
+  \begin{columns}
+    \begin{column}{.5\linewidth}
+      \includegraphics[scale=0.4]{img/goals}
+    \end{column}
+    \begin{column}{.5\linewidth}
+      \begin{itemize}
+      \item Enhance UIs ($libreadline$ - gdb style)
+      \item Support more disklabels (APM, AIX)
+      \item General cleanups and refactoring
+      \item Documentation
+      \item tests, tests, tests
+      \end{itemize}
+    \end{column}
+  \end{columns}      
 \end{frame}
