author names cleanups

--- a/fdisk-osc12.tex
+++ b/fdisk-osc12.tex
@@ -9,12 +9,12 @@
 
 \begin{document}
 \title{fdisk: A XXI Century Disk Partitioning Tool}
-\author{Davidlohr Bueso dave@gnu.org \\ Petr Uzel petr.uzel@suse.cz}
+\author[]{Davidlohr Bueso dave@gnu.org \and Petr Uzel petr.uzel@suse.cz}
 \institute{openSUSE Conference 2012}
 \date{October 21st, 2012.}
 
 \begin{frame}
-\titlepage
+  \titlepage
 \end{frame}
 
 \begin{frame}\frametitle{Table of contents}\tableofcontents
@@ -28,5 +28,4 @@
 \begin{frame}\frametitle{Thank you}
   \center{ \includegraphics[scale=0.5]{img/thankyou} }
 \end{frame}
-
 \end{document}
