make conference name bigger

--- a/fdisk-osc12.tex
+++ b/fdisk-osc12.tex
@@ -10,7 +10,7 @@
 \begin{document}
 \title{fdisk: A XXI Century Disk Partitioning Tool}
 \author[]{Davidlohr Bueso dave@gnu.org \and Petr Uzel petr.uzel@suse.cz}
-\institute{openSUSE Conference 2012}
+\institute{\large{openSUSE Conference 2012}}
 \date{October 21st, 2012.}
 
 \begin{frame}
