--- a/fdisk-osc12.tex
+++ b/fdisk-osc12.tex
@@ -17,7 +17,8 @@
   \titlepage
 \end{frame}
 
-\begin{frame}\frametitle{Table of contents}\tableofcontents
+\begin{frame}
+  \frametitle{Overview}\tableofcontents
 \end{frame}
 
 \include{intro}
