add api section

--- a/gpt-overview.tex
+++ b/gpt-overview.tex
@@ -1,3 +1,6 @@
+% Copyright (C) 2012 Davidlohr Bueso <dave@gnu.org>
+
+% GPT STUFF
 \section{GPT Overview}
 \begin{frame}\frametitle{What is GPT?}
   A standard developed by Intel in the late '90s for the layout of the partition table on a physical hard disk.\newline
@@ -22,8 +25,4 @@
   \begin{itemize}
     \item s
   \end{itemize}
-\end{frame}
-
-\begin{frame}
-  \includegraphics[scale=0.35]{img/fdisk-arch.png}
 \end{frame}
