--- a/api.tex
+++ b/api.tex
@@ -1,7 +1,7 @@
 % Copyright (C) 2012 Davidlohr Bueso <dave@gnu.org>
 
 % API STUFF
-\section{Internal API}
+\section{New Internal API}
 \begin{frame}\frametitle{Overview}
   dasds
 \end{frame}
