--- a/gpt-overview.tex
+++ b/gpt-overview.tex
@@ -1,7 +1,7 @@
 % Copyright (C) 2012 Davidlohr Bueso <dave@gnu.org>
 
 % GPT STUFF
-\section{GPT Overview}
+\section{GPT Support}
 \begin{frame}\frametitle{What is GPT?}
   A standard developed by Intel in the late '90s for the layout of the partition table on a physical hard disk.\newline
 
