add gpt drawbacks

--- a/gpt-overview.tex
+++ b/gpt-overview.tex
@@ -23,6 +23,11 @@
 \begin{frame}\frametitle{Drawbacks of GPT}
   There's no such thing as a free lunch:
   \begin{itemize}
-    \item s
+  \item Compatibility
+    \begin{itemize}
+    \item OS
+    \item Bootloaders
+    \end{itemize}
+  \item Non-standard schemes (Hybrid MBRs)
   \end{itemize}
 \end{frame}
