add more implementation stuff

--- a/gpt-overview.tex
+++ b/gpt-overview.tex
@@ -56,6 +56,7 @@
   \begin{itemize}
   \item Deals with both legacy protective and hybrid MBRs.
   \item Updates checksums on the fly and not only when writing in-memory data to disk.
+  \item Plays well with larger logical-sectors (4K)
   \item Generous support for GUID partition types.
   \end{itemize}
 \end{frame}
