--- a/api.tex
+++ b/api.tex
@@ -24,7 +24,7 @@
 \subsection{API Benefits}
 \begin{frame}\frametitle{API Benefits}
   \begin{itemize}
-  \item Unifies concepts and specifications behind different partition formats.
+  \item Unifies concepts and specifications behind different partition formats; without hiding the details.
   \item Simplifies dealing with disklabel specifics.
   \item Makes the code easier to read and modify.
   \item Makes detecting existing bugs easier and reduces the probability of introducing new bugs.
