--- a/fdisk-osc12.tex
+++ b/fdisk-osc12.tex
@@ -17,10 +17,11 @@
   \titlepage
 \end{frame}
 
-\begin{frame}
-  \frametitle{Overview}\tableofcontents
-\end{frame}
+%\begin{frame}
+%  \frametitle{Overview}\tableofcontents
+%\end{frame}
 
+\include{overview}
 \include{intro}
 \include{state-art}
 \include{api}
