--- a/gpt-overview.tex
+++ b/gpt-overview.tex
@@ -12,8 +12,8 @@
 \begin{frame}\frametitle{Benefits of GPT}
   So, what's the big deal about GPT?
   \begin{itemize}
-  \item Forget extended or logical DOS-like partitions. GPT can handle at least 128 partitions.
-  \item 64-bit sectors gives us $2^{64}$ available sectors, or 9.4 Zb partitions (with 512 bytes).
+  \item Forget extended or logical DOS-like partitions. GPT can handle at least 128 primary, named, partitions.
+  \item 64-bit addressing gives us $2^{64}$ available sectors, or 9.4 Zb partitions (with 512 bytes).
   \item 32-bit CRC checksums to ensure data integrity.
   \item Redundant data structures help protect against disk errors.
   \end{itemize}
