--- a/state-art.tex
+++ b/state-art.tex
@@ -33,7 +33,7 @@
     \begin{column}{.5\linewidth}
       \begin{itemize}
       \item DOS compatibility mode
-      \item Only works with MBRs
+      \item Doesn't work with GPT
       \item CHS addressing
       \item Mainframe style UIs\newline
       \end{itemize}
